diveintoansiblelabmaster_diveinto.io-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: diveintoansiblelabmaster_diveinto.io
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/diveintoansiblelabmaster_diveinto.io: "true"
  podSelector:
    matchLabels:
      io.kompose.network/diveintoansiblelabmaster_diveinto.io: "true"
